# PySteiner

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/_html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_html/.doctrees/: environment.pickle  index.doctree
examples/: example_3-2_Stars.py  example_3-3-5.py  example_3-3_Stars.py  example_3-3_Villarceau.py  example_5-4-3.py  example_6-6.py
pysteiner/: steiner.py  steinerStars.py
tests/: test_pysteiner.py
