[tool.poetry]
name = "pysteiner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.24.2"
pyvista = "^0.42.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
